# skjalf

./: .gitignore  CHANGELOG.md  ISSUES.md  LICENSE  Makefile  README.md  README_embed_faces.md  THIRD_PARTY_LICENSES.md  embed_faces.py  names.yaml  pyproject.toml  test_workflow.sh
.github/workflows/: release.yml  test.yml
skjalf/: __init__.py  __main__.py  config.py  utils.py
skjalf/view/: __init__.py  __main__.py  event_bus.py  file_op_dialog.py  help_window.py  main_view.py  main_window.py  model_download_dialog.py  model_loading_dialog.py  models.py  sidebar.py  version_check.py
skjalf/watcher/: __init__.py  core.py  embedder.py  events.py  face_search.py  fs_monitor.py  models.py  thumbnails.py  worker.py
tests/: __init__.py  conftest.py  test_events.py  test_face_search.py  test_models_sqlalchemy.py  test_thumbnails.py  test_utils.py
tests/test_core/: test_embedding.py  test_navigate.py  test_pending_count.py  test_register_folder.py  test_search.py
tests/test_integration/: test_full_workflow.py
tests/test_view/: test_event_bus.py  test_models.py  test_version_check_gui.py
