[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["skjalf*"]

[project]
authors = [{name = "Viktor Haag"}, {name = "Luzian Hahn"}]
maintainers = [{name = "Viktor Haag"}, {name = "Luzian Hahn"}]
name = "skjalf"
version = "1.1.0"
description = "Image file browser with semantic search"
readme = "README.md"
license = "Apache-2.0"
keywords = ["image-browser", "semantic-search", "ai", "file-explorer"]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "PySide6>=6.5",
    "watchdog>=3.0",
    "sqlalchemy>=2.0",
    "pillow>=10.0",
    "loguru>=0.7.3",
    "chromadb>=1.5.9",
    "torch>=2.12.0",
    "transformers>=5.10.2",
    "accelerate==1.13.0",
]
license-files = ["LICENSE"]
urls = {Homepage = "https://github.com/viktor-haag/skjalf", Repository = "https://github.com/viktor-haag/skjalf", "Bug Tracker" = "https://github.com/viktor-haag/skjalf/issues"}

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "ruff>=0.15.21",
]
build = [
    "build>=1.0",
    "twine>=5.0",
]
dev = ["skjalf[test,build]"]

[project.scripts]
skjalf = "skjalf.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gui: tests that require a display (PySide6 widgets)",
    "slow: tests that take significant time (embedding, integration)",
    "integration: end-to-end tests requiring real filesystem/DB",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:The `expire_on_commit` argument is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = ["skjalf"]
omit = [
    "tests/*",
    "skjalf/__main__.py",
    "skjalf/view/__main__.py",
    "skjalf/view/help_window.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
logging_level = "DEBUG"
tag_format = "v{version}"
commit_author = "semantic-release <semantic-release>"
commit_parser = "conventional"


[tool.semantic_release.publish]
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = ["build", "chore", "ci", "docs", "style", "refactor", "test"]
allowed_tags = ["feat", "fix", "perf", "build", "chore", "ci", "docs", "style", "refactor", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false
